# chatbot_rag

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  init-ollama.sh  pyproject.toml  requirements.txt  wait-for-postgres.sh
alembic/: env.py
alembic/versions/: b460c10fe2c8_initial_migration.py
src/database/: db_connection.py
src/database/data_layer_access/: file_dal.py  vectorstore_dal.py
src/database/models/: schemas.py
src/database/repository/: file_repository.py  user_orm_repository.py
src/database/services/: collection_management_service.py
src/handlers/: authorization.py  data_ingestion.py  file_partition.py  llm_chat_handler.py  rerank_handler.py  retrieval_handler.py  vector_store_handler.py
src/helpers/: chat_management_service.py  qdrant_connection.py  qdrant_connection_helper.py
src/repository/: abstr_repository.py  chat_repository.py  file_repository.py  user_repository.py
src/routers/: documents.py  llm_chat.py  rerank.py  retriever.py  security.py  vectorstore.py
src/settings/: database_config.yaml
src/utils/: config.py
